[package]
name = "disable-sni-reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-tls = "3.0.3"
actix-web = { version = "4.0.1", features = ["rustls"] }
async-ctrlc = "1.2.0"
async-trait = "0.1.53"
awc = { version = "3.0.0", features = ["rustls"] }
dirs-next = "2.0.0"
futures = "0.3.21"
once_cell = "1.12.0"
pretty_env_logger = "0.4.0"
rcgen = { version = "0.9.2", features = ["pem", "x509-parser"] }
regex = "1.5.6"
reqwest = { version = "0.11.10", features = ["brotli"] }
rustls = "0.20.6"
serde = "1.0.137"
serde_derive = "1.0.137"
thiserror = "1.0.31"
toml = "0.5.9"
tracing = "0.1.34"
url = "2.2.2"
webpki-roots = "0.22.3"
