[package]
name = "dns"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
dashmap = "5.4.0"
log = "0.4.17"
once_cell = "1.15.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = "1.0.145"
serde_derive = "1.0.145"

[dev-dependencies]
tokio = { version = "1.21.1", features = ["full"] }
