[package]
name = "http_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
http = { path = "../http" }
dns = { path = "../dns" }
bytes = "1.2.1"
log = "0.4.17"
thiserror = "1.0.35"
tokio = { version = "1.21.0", features = ["full"] }
env_logger = "0.9.1"
futures-util = "0.3.24"
once_cell = "1.15.0"
